Paging stuff added

--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -41,10 +41,10 @@
                         <div class="hoteldescr">
                             <h3>{{name}}</h3>
                             <div class="stars stars-{{stars}}"><span></span></div>
-                            <p class="info"><a href="#!/search/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Weitere Hotels in {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
+                            <p class="info"><a href="#!/lookup/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Weitere Hotels in {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
                             <p class="info">aus <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
                             <p class="descr">{{description}}</p>
-                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Lesen Sie mehr über dieses Hotel" target="_blank">Lesen Sie mehr</a> / <a href="#!/select/{{hotelId}}" title="Schreibe Hotel zu Ihren ausgewählten">Zur Auswahl</a></p>
+                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Lesen Sie mehr über dieses Hotel">Lesen Sie mehr</a> / <a href="#!/select/{{hotelId}}" title="Schreibe Hotel zu Ihren ausgewählten">Zur Auswahl</a></p>
                         </div>
                 </div>
             <div class="closer"></div>
