--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -40,10 +40,10 @@
                         <div class="hoteldescr">
                             <h3>{{name}}</h3>
                             <div class="stars stars-{{stars}}"><span></span></div>
-                            <p class="info"><a href="#!/search/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Еще отели в {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
+                            <p class="info"><a href="#!/lookup/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="Еще отели в {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
                             <p class="info">от <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
                             <p class="descr">{{description}}</p>
-                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Подробнее об отеле" target="_blank">Подробнее об отеле</a> / <a href="#!/select/{{hotelId}}" title="Добавить к отобранным">Добавить к отобранным</a></p>
+                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Подробнее об отеле">Подробнее об отеле</a> / <a href="#!/select/{{hotelId}}" title="Добавить к отобранным">Добавить к отобранным</a></p>
                         </div>
                     </div>
             <div class="closer"></div>
