--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -41,10 +41,10 @@
                         <div class="hoteldescr">
                             <h3>{{name}}</h3>
                             <div class="stars stars-{{stars}}"><span></span></div>
-                            <p class="info"><a href="#!/search/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="More hotels in {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
+                            <p class="info"><a href="#!/lookup/{{#Address}}{{#GeoLocation}}{{cityId}}{{/GeoLocation}}{{/Address}}" title="More hotels in {{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}">{{#Address}}{{#GeoLocation}}{{city}}{{/GeoLocation}}{{/Address}}</a>,&nbsp;{{#Address}}{{#GeoLocation}}{{country}}{{/GeoLocation}}{{/Address}}</p>
                             <p class="info">from <strong>{{currency}}&nbsp;{{minOfferPrice}}</strong></p>
                             <p class="descr">{{description}}</p>
-                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Read more about this hotel" target="_blank">Read more</a> / <a href="#!/select/{{hotelId}}" title="Add to Selected">Add to Selected</a></p>
+                            <p class="noprint"><a href="/#!/card/{{hotelId}}" title="Read more about this hotel">Read more</a> / <a href="#!/select/{{hotelId}}" title="Add to Selected">Add to Selected</a></p>
                         </div>
                 </div>
             <div class="closer"></div>
