--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -29,6 +29,7 @@
                     <div class="opener"></div>
                     <div id="hotellist_holder"></div>
                 </div>
+                <div id="srPager" class="paging"></div>
             </div>
           </div>
     </script>
