--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -147,7 +147,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">Hotels</span><input type="button" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
+        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
     </div>
 
     <div class="clearer"></div>
