--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -150,7 +150,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">Hotels</span><input type="button" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
+        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
     </div>
 
     <div class="clearer"></div>
