searchform events handling fix. TODO Do not forget change search form description in appropriated locales(en/de)

--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -131,7 +131,7 @@
     </script>
 
  <script type="text/html" id="searchform_tmpl_quick">
-    <form class="searchform quick" id="searchform_quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded" >
+    <form class="searchform quick" id="searchform" action="#" method="post" onsubmit="return false" >
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -149,7 +149,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
+        <span class="label">3</span><input type="submit" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
     </div>
 
     <div class="clearer"></div>
@@ -157,7 +157,7 @@
 </script>
 
 <script type="text/html" id="searchform_tmpl_advanced">
-<form class="searchform advanced"  id="searchform_advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+<form class="searchform advanced"  id="searchform" action="#" method="post" onsubmit="return false">
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -219,7 +219,7 @@
     </div>
 
     <div class="label last">
-        <span class="label">Отели</span><input type="button" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
+        <span class="label">Отели</span><input type="submit" id="mkSearch" name="mkSearch" value="Найти" class="submit"/>
     </div>
 
     <div class="clearer"></div>
