quick search refactored. localized templates are changed for new markup.

--- a/Locales/en/main.html
+++ b/Locales/en/main.html
@@ -133,7 +133,7 @@
         <li class="search">advanced</li>
     </script>
     <script type="text/html" id="searchform_tmpl_quick">
-    <form class="searchform quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+    <form class="searchform quick" id="searchform" action="#" method="post" onsubmit="return false" >
     <input type="hidden" name="cityId" value="0"/>
     <div class="label">
         <span class="label">1</span>
@@ -150,14 +150,14 @@
     </div>
 
     <div class="label last">
-        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
+        <span class="label">3</span><input type="submit" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
     </div>
 
     <div class="clearer"></div>
 </form>
 </script>
  <script type="text/html" id="searchform_tmpl_advanced">
-<form class="searchform advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+<form class="searchform advanced"  id="searchform" action="#" method="post" onsubmit="return false">
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -218,7 +218,7 @@
         </select>
     </div>
     <div class="label last">
-        <span class="label">Hotels</span><input type="button" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
+        <span class="label">Hotels</span><input type="submit" id="mkSearch" name="mkSearch" value="Find" class="submit"/>
     </div>
     <div class="clearer"></div>
 </form>
