--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -130,7 +130,7 @@
         <li class="search">erweiterte</li>
     </script>
     <script type="text/html" id="searchform_tmpl_quick">
-    <form  class="searchform quick" id="searchform_quick" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+    <form class="searchform quick" id="searchform" action="#" method="post" onsubmit="return false" >
     <input type="hidden" name="cityId" value="0"/>
     <div class="label">
         <span class="label">1</span>
@@ -147,14 +147,14 @@
     </div>
 
     <div class="label last">
-        <span class="label">3</span><input type="button" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
+        <span class="label">3</span><input type="submit" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
     </div>
 
     <div class="clearer"></div>
 </form>
 </script>
  <script type="text/html" id="searchform_tmpl_advanced">
-<form class="searchform advanced"  id="searchform_advanced" action="/bookenizer-stubs/hms-services/hotel/search" method="post" enctype="application/x-www-form-urlencoded">
+<form class="searchform advanced"  id="searchform" action="#" method="post" onsubmit="return false">
     <input type="hidden" name="cityId" value="0"/>
 
     <div class="label">
@@ -215,7 +215,7 @@
         </select>
     </div>
     <div class="label last">
-        <span class="label">Hotels</span><input type="button" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
+        <span class="label">Hotels</span><input type="submit" id="mkSearch" name="mkSearch" value="Suche" class="submit"/>
     </div>
     <div class="clearer"></div>
 </form>
